--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "p12-front-end-dashboard",
-  "homepage": "https://samarkand-fr.github.io/P12-front-end-dashboard-.git",
+  "homepage": "https://samarkand-fr.github.io/P12-front-end-dashboard-/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
