--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "p12-front-end-dashboard",
-  "homepage": "https://samarkand-fr.github.io/P12-front-end-dashboard-/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,8 +20,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "@babel/plugin-proposal-private-property-in-object":"7.21.11"
   }
 }
