improve the css

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 # Set the REACT_APP_DATA_MOCKED variable to 'true' to use mocked data
 # or set it to 'false' to fetch data from a server
 
-REACT_APP_DATA_MOCKED= true
+REACT_APP_DATA_MOCKED= false
 
