--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "p12-front-end-dashboard",
   "version": "0.1.0",
+  "homepage": "https://samarkand-fr.github.io/P12-front-end-dashboard-/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,6 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object":"7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "gh-pages": "^5.0.0"
   }
 }
