--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "p12-front-end-dashboard",
   "version": "0.1.0",
-  "homepage": "https://samarkand-fr.github.io/P12-front-end-dashboard-/",
+  "homepage": "https://samarkand-fr.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
